--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultDb": "Server=.;Database=EnglishLearning;user id=sa;password=Welkom01;MultipleActiveResultSets=True;Encrypt=False"
+  },
+  "App": {
+    "CorsConfig": {
+      "AllowedOrigins": [
+        "http://localhost:3000"
+      ]
+    }
+  }
 }
